crates/llmem-cli/tests/snapshots/integration__snapshot_config_get_output.snap
---
source: crates/llmem-cli/tests/integration.rs
expression: json
---
{
  "data": {
    "key": "embedding.model",
    "value": "nomic-embed-text"
  },
  "ok": true
}
