crates/llmem-cli/tests/snapshots/integration__snapshot_consolidate_dry_run_output.snap
---
source: crates/llmem-cli/tests/integration.rs
expression: redact_cli_json(json)
---
{
  "data": {
    "actions": [
      {
        "action": "promote",
        "file": "feedback_important-observation.md",
        "source": "note"
      }
    ],
    "decayed": 0,
    "dry_run": true,
    "promoted": 1
  },
  "ok": true
}
