crates/llmem-cli/tests/snapshots/integration__snapshot_forget_error_output.snap
---
source: crates/llmem-cli/tests/integration.rs
expression: json
---
{
  "error": "not found: nonexistent.md",
  "ok": false
}
