crates/llmem-cli/tests/snapshots/integration__snapshot_init_output.snap
---
source: crates/llmem-cli/tests/integration.rs
expression: redact_cli_json(json)
---
{
  "data": {
    "level": "project",
    "path": "[path]"
  },
  "ok": true
}
