crates/llmem-cli/tests/snapshots/integration__snapshot_memorize_output.snap
---
source: crates/llmem-cli/tests/integration.rs
expression: json
---
{
  "data": {
    "action": "created",
    "embedded": true,
    "file": "feedback_write-tests.md"
  },
  "ok": true
}
