crates/llmem-cli/tests/snapshots/integration__snapshot_reflect_output.snap
---
source: crates/llmem-cli/tests/integration.rs
expression: redact_cli_json(json)
---
{
  "data": {
    "inbox": {
      "capacity": 7,
      "items": [
        {
          "attention_score": 0.5,
          "created_at": "[timestamp]",
          "id": "check-logging",
          "source": "note"
        }
      ],
      "size": 1
    },
    "memories": [
      {
        "file": "feedback_prefer-rust.md",
        "source": "memorize",
        "strength": 1.0,
        "summary": "prefer rust",
        "title": "prefer rust"
      }
    ]
  },
  "ok": true
}
